--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret=";DQ^Ua3RkCAAuk1lw5Yj@2F/bNYNo?RdIbN^C9h91a0WjU5XpH4;]<KFVvw]
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,tr"
 
 # Global object class
 # ~~~~~
