Before adding a new product

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,8 @@ application.secret=";DQ^Ua3RkCAAuk1lw5Yj@2F/bNYNo?RdIbN^C9h91a0WjU5XpH4;]<KFVvw]
 # ~~~~~
 application.langs="en,tr"
 
+environment.user=${USERNAME}
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
